fix: whitespace on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -405,7 +405,7 @@ h3 {
 #hero {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: 100svh;
   overflow: hidden;
 }
 
